--- a/day1_reading_journal.ipynb
+++ b/day1_reading_journal.ipynb
@@ -1,8 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# Day 1 Reading Journal\n",
     "\n",
@@ -33,12 +37,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Welcome to Python 2.7!  This is the online help utility.\n",
+      "\n",
+      "If this is your first time using Python, you should definitely check out\n",
+      "the tutorial on the Internet at http://docs.python.org/2.7/tutorial/.\n",
+      "\n",
+      "Enter the name of any module, keyword, or topic to get help on writing\n",
+      "Python programs and using Python modules.  To quit this help utility and\n",
+      "return to the interpreter, just type \"quit\".\n",
+      "\n",
+      "To get a list of available modules, keywords, or topics, type \"modules\",\n",
+      "\"keywords\", or \"topics\".  Each module also comes with a one-line summary\n",
+      "of what it does; to list the modules whose summaries contain a given word\n",
+      "such as \"spam\", type \"modules spam\".\n",
+      "\n",
+      "help> print\n",
+      "The ``print`` statement\n",
+      "***********************\n",
+      "\n",
+      "   print_stmt ::= \"print\" ([expression (\",\" expression)* [\",\"]]\n",
+      "                  | \">>\" expression [(\",\" expression)+ [\",\"]])\n",
+      "\n",
+      "``print`` evaluates each expression in turn and writes the resulting\n",
+      "object to standard output (see below).  If an object is not a string,\n",
+      "it is first converted to a string using the rules for string\n",
+      "conversions.  The (resulting or original) string is then written.  A\n",
+      "space is written before each object is (converted and) written, unless\n",
+      "the output system believes it is positioned at the beginning of a\n",
+      "line.  This is the case (1) when no characters have yet been written\n",
+      "to standard output, (2) when the last character written to standard\n",
+      "output is a whitespace character except ``' '``, or (3) when the last\n",
+      "write operation on standard output was not a ``print`` statement. (In\n",
+      "some cases it may be functional to write an empty string to standard\n",
+      "output for this reason.)\n",
+      "\n",
+      "Note: Objects which act like file objects but which are not the built-in\n",
+      "  file objects often do not properly emulate this aspect of the file\n",
+      "  object's behavior, so it is best not to rely on this.\n",
+      "\n",
+      "A ``'\\n'`` character is written at the end, unless the ``print``\n",
+      "statement ends with a comma.  This is the only action if the statement\n",
+      "contains just the keyword ``print``.\n",
+      "\n",
+      "Standard output is defined as the file object named ``stdout`` in the\n",
+      "built-in module ``sys``.  If no such object exists, or if it does not\n",
+      "have a ``write()`` method, a ``RuntimeError`` exception is raised.\n",
+      "\n",
+      "``print`` also has an extended form, defined by the second portion of\n",
+      "the syntax described above. This form is sometimes referred to as\n",
+      "\"``print`` chevron.\" In this form, the first expression after the\n",
+      "``>>`` must evaluate to a \"file-like\" object, specifically an object\n",
+      "that has a ``write()`` method as described above.  With this extended\n",
+      "form, the subsequent expressions are printed to this file object.  If\n",
+      "the first expression evaluates to ``None``, then ``sys.stdout`` is\n",
+      "used as the file for output.\n",
+      "\n",
+      "help> q\n",
+      "\n",
+      "You are now leaving help and returning to the Python interpreter.\n",
+      "If you want to ask for help on a particular object directly from the\n",
+      "interpreter, you can type \"help(object)\".  Executing \"help('string')\"\n",
+      "has the same effect as typing a particular string at the help> prompt.\n"
+     ]
+    }
+   ],
+   "source": [
+    "help()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,12 +128,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.0035\n",
+      "8.56714499893\n"
+     ]
+    }
+   ],
+   "source": [
+    "miles = 10/1.61\n",
+    "avg_time_minutes = 43.5/miles\n",
+    "hours = 43.5/60\n",
+    "avg_speed_mph = miles/hours\n",
+    "print avg_time_minutes\n",
+    "print avg_speed_mph"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,7 +185,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. 8 integer\n",
+    "2. 8.5 float\n",
+    "3. 4.0 float\n",
+    "4. 11 integer\n",
+    "5. ..... string"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,12 +213,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "392.699081699\n"
+     ]
+    }
+   ],
+   "source": [
+    "radius = 5\n",
+    "volume = 4/3 * math.pi * radius**3\n",
+    "print volume"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,18 +241,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "945.45\n"
+     ]
+    }
+   ],
+   "source": [
+    "price= 24.95\n",
+    "storeprice= price * 0.6\n",
+    "shipping = 3 + 0.75 * 59\n",
+    "wholesale_cost = storeprice * 60 + shipping\n",
+    "print wholesale_cost"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "If I leave my house at 6:52 am and run 1 mile at an easy pace (8:15 per mile), then 3 miles at tempo (7:12 per mile) and 1 mile at easy pace again, what time do I get home for breakfast? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 : 37.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= 12/60\n",
+    "tempo = (7 + a) * 3\n",
+    "easy = 8.25 * 2\n",
+    "time_running = tempo + easy\n",
+    "time_running_hours = time_running/60\n",
+    "b = 52/60\n",
+    "time_start = 6 + b\n",
+    "time_end = time_start + time_running_hours\n",
+    "c = time_end - 6\n",
+    "minu = c*60\n",
+    "print 6, ':', minu"
    ]
   },
   {
@@ -164,6 +317,29 @@
     "```\n",
     ">>> right_justify('allen')\n",
     "                                                                 allen```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                 allen\n"
+     ]
+    }
+   ],
+   "source": [
+    "def right_justify(allen):\n",
+    "    length= len(allen)\n",
+    "    print ' '*(69-length), allen\n",
+    "    \n",
+    "right_justify('allen')"
    ]
   },
   {
@@ -199,12 +375,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ - - - -  + - - - -  +\n",
+      "|          |          |\n",
+      "|          |          |\n",
+      "|          |          |\n",
+      "|          |          |\n",
+      "+ - - - -  + - - - -  +\n",
+      "|          |          |\n",
+      "|          |          |\n",
+      "|          |          |\n",
+      "|          |          |\n",
+      "+ - - - -  + - - - -  +\n"
+     ]
+    }
+   ],
+   "source": [
+    "def grid():\n",
+    "    print '+','- '*4,'+','- '*4,'+'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '+','- '*4,'+','- '*4,'+'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '+','- '*4,'+','- '*4,'+'\n",
+    "    \n",
+    "grid()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,12 +424,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ - - - -  + - - - -  + - - - -  + - - - -  +\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "+ - - - -  + - - - -  + - - - -  + - - - -  +\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "+ - - - -  + - - - -  + - - - -  + - - - -  +\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "+ - - - -  + - - - -  + - - - -  + - - - -  +\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "|          |          |          |          |\n",
+      "+ - - - -  + - - - -  + - - - -  + - - - -  +\n"
+     ]
+    }
+   ],
+   "source": [
+    "def biggrid():\n",
+    "    print '+','- '*4,'+','- '*4,'+','- '*4,'+','- '*4,'+'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '+','- '*4,'+','- '*4,'+','- '*4,'+','- '*4,'+'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '+','- '*4,'+','- '*4,'+','- '*4,'+','- '*4,'+'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '+','- '*4,'+','- '*4,'+','- '*4,'+','- '*4,'+'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '|', ' '*8,'|', ' '*8, '|', ' '*8,'|', ' '*8, '|'\n",
+    "    print '+','- '*4,'+','- '*4,'+','- '*4,'+','- '*4,'+'\n",
+    "    \n",
+    "biggrid()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,12 +505,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No, that doesn't work.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_fermat(a, b, c, n):\n",
+    "    left= a**n +b**n\n",
+    "    right= c**n\n",
+    "    if left == right:\n",
+    "        print 'Holy smokes, Fermat was wrong!'\n",
+    "    else: print \"No, that doesn't work.\"\n",
+    "\n",
+    "check_fermat(4, 3, 6, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,12 +538,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No, that doesn't work.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_check(a,b,c,n):\n",
+    "    a= int(a)\n",
+    "    b=int(b)\n",
+    "    c=int(c)\n",
+    "    n=int(n)\n",
+    "    check_fermat(a,b,c,n)\n",
+    "    \n",
+    "check_check(34.2,11,64.3,2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -280,12 +576,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_triangle(a,b,c):\n",
+    "    if a+b<c:\n",
+    "        print 'No'\n",
+    "    elif a+c<b:\n",
+    "        print 'No'\n",
+    "    elif b+c<a:\n",
+    "        print 'No'\n",
+    "    else:\n",
+    "        print 'Yes'\n",
+    "\n",
+    "is_triangle(1,2,6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -296,12 +612,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "def int_triangle(a,b,c):\n",
+    "    a= int(a)\n",
+    "    b=int(b)\n",
+    "    c=int(c)\n",
+    "    is_triangle(a,b,c)\n",
+    "\n",
+    "int_triangle(2,4,6.5)"
+   ]
   },
   {
    "cell_type": "markdown",
