--- a/day2_reading_journal.ipynb
+++ b/day2_reading_journal.ipynb
@@ -47,12 +47,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compare_fn(x,y):\n",
+    "    if x > y:\n",
+    "        return 1\n",
+    "    if x == y:\n",
+    "        return 0\n",
+    "    if x < y:\n",
+    "        return -1\n",
+    "    \n",
+    "print compare_fn(3,2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -63,17 +81,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "def absolute_value(x):\n",
+    "    if x > 0:\n",
+    "        return x\n",
     "    if x < 0:\n",
     "        return -x\n",
+    "    if x == 0:\n",
+    "        return 0\n",
+    "print absolute_value(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def absolute_value(x):\n",
     "    if x > 0:\n",
-    "        return x"
+    "        return x\n",
+    "    if x < 0:\n",
+    "        return -x\n",
+    "    if x == 0:\n",
+    "        return 0\n",
+    "print absolute_value(0)"
    ]
   },
   {
@@ -86,12 +141,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hypotenuse(a,b):\n",
+    "    return 0.0\n",
+    "\n",
+    "print hypotenuse(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(16, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hypotenuse(a,b):\n",
+    "    squarea= a**2\n",
+    "    squareb= b**2\n",
+    "    return (squarea, squareb)\n",
+    "\n",
+    "print hypotenuse(4,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hypotenuse(a,b):\n",
+    "    squarea= a**2\n",
+    "    squareb= b**2\n",
+    "    squarec= squarea + squareb\n",
+    "    return squarec\n",
+    "\n",
+    "print hypotenuse(4,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.41421356237\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hypotenuse(a,b):\n",
+    "    squarea= a**2\n",
+    "    squareb= b**2\n",
+    "    squarec= squarea + squareb\n",
+    "    c= squarec**(0.5)\n",
+    "    return c\n",
+    "\n",
+    "print hypotenuse(1,1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,12 +246,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_between(x,y,z):\n",
+    "    if x <= y:\n",
+    "        if y <= z:\n",
+    "            return 'True'\n",
+    "        else:\n",
+    "            return 'False'\n",
+    "    else:\n",
+    "        return 'False'\n",
+    "\n",
+    "print is_between(1,3,1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    "if x==y, they are equal. "
    ]
   },
   {
@@ -137,6 +299,156 @@
    "metadata": {},
    "source": [
     "**Challenge:** Prove/disprove the Collatz conjecture :)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "195\n",
+      "586\n",
+      "293.0\n",
+      "880.0\n",
+      "440.0\n",
+      "220.0\n",
+      "110.0\n",
+      "55.0\n",
+      "166.0\n",
+      "83.0\n",
+      "250.0\n",
+      "125.0\n",
+      "376.0\n",
+      "188.0\n",
+      "94.0\n",
+      "47.0\n",
+      "142.0\n",
+      "71.0\n",
+      "214.0\n",
+      "107.0\n",
+      "322.0\n",
+      "161.0\n",
+      "484.0\n",
+      "242.0\n",
+      "121.0\n",
+      "364.0\n",
+      "182.0\n",
+      "91.0\n",
+      "274.0\n",
+      "137.0\n",
+      "412.0\n",
+      "206.0\n",
+      "103.0\n",
+      "310.0\n",
+      "155.0\n",
+      "466.0\n",
+      "233.0\n",
+      "700.0\n",
+      "350.0\n",
+      "175.0\n",
+      "526.0\n",
+      "263.0\n",
+      "790.0\n",
+      "395.0\n",
+      "1186.0\n",
+      "593.0\n",
+      "1780.0\n",
+      "890.0\n",
+      "445.0\n",
+      "1336.0\n",
+      "668.0\n",
+      "334.0\n",
+      "167.0\n",
+      "502.0\n",
+      "251.0\n",
+      "754.0\n",
+      "377.0\n",
+      "1132.0\n",
+      "566.0\n",
+      "283.0\n",
+      "850.0\n",
+      "425.0\n",
+      "1276.0\n",
+      "638.0\n",
+      "319.0\n",
+      "958.0\n",
+      "479.0\n",
+      "1438.0\n",
+      "719.0\n",
+      "2158.0\n",
+      "1079.0\n",
+      "3238.0\n",
+      "1619.0\n",
+      "4858.0\n",
+      "2429.0\n",
+      "7288.0\n",
+      "3644.0\n",
+      "1822.0\n",
+      "911.0\n",
+      "2734.0\n",
+      "1367.0\n",
+      "4102.0\n",
+      "2051.0\n",
+      "6154.0\n",
+      "3077.0\n",
+      "9232.0\n",
+      "4616.0\n",
+      "2308.0\n",
+      "1154.0\n",
+      "577.0\n",
+      "1732.0\n",
+      "866.0\n",
+      "433.0\n",
+      "1300.0\n",
+      "650.0\n",
+      "325.0\n",
+      "976.0\n",
+      "488.0\n",
+      "244.0\n",
+      "122.0\n",
+      "61.0\n",
+      "184.0\n",
+      "92.0\n",
+      "46.0\n",
+      "23.0\n",
+      "70.0\n",
+      "35.0\n",
+      "106.0\n",
+      "53.0\n",
+      "160.0\n",
+      "80.0\n",
+      "40.0\n",
+      "20.0\n",
+      "10.0\n",
+      "5.0\n",
+      "16.0\n",
+      "8.0\n",
+      "4.0\n",
+      "2.0\n",
+      "1.0\n",
+      "Nope, I think he was right\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Collatz(a):\n",
+    "    print a\n",
+    "    while a != 1:\n",
+    "        if a % 2 == 0:\n",
+    "            a = (0.5)*(a)\n",
+    "            print a\n",
+    "        else:\n",
+    "            a = 3*a +1\n",
+    "            print a\n",
+    "\n",
+    "Collatz(195)\n",
+    "print 'Nope, I think he was right'"
    ]
   },
   {
@@ -149,12 +461,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5\n",
+      "1.41666666667\n",
+      "1.41421568627\n",
+      "1.41421356237\n",
+      "1.41421356237\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square_root(a):\n",
+    "    y= (.5)*a\n",
+    "    epsi= 0.0000001\n",
+    "    while True:\n",
+    "        x = y\n",
+    "        y = (x+(a/x))/2\n",
+    "        print y\n",
+    "        if abs(y-x) < epsi:\n",
+    "            break\n",
+    "square_root(2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,12 +515,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1       1.00000004646         1.0                   4.64611473738e-08\n",
+      "2       1.41421356237         1.41421356237         1.59472435257e-12\n",
+      "3       1.73205081001         1.73205080757         2.44585018905e-09\n",
+      "4       2.0                   2.0                   0.0\n",
+      "5       2.23606797792         2.2360679775          4.16013890003e-10\n",
+      "6       2.44948979592         2.44948974278         5.31351895816e-08\n",
+      "7       2.64575131106         2.64575131106         1.02584607475e-13\n",
+      "8       2.82842712475         2.82842712475         3.18944870514e-12\n",
+      "9       3.00000000004         3.0                   3.9321434997e-11\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square_root(a):\n",
+    "    y= (.5)*a\n",
+    "    epsi= 0.0000001\n",
+    "    while True:\n",
+    "        x = y\n",
+    "        y = (x+(a/x))/2\n",
+    "        if abs(y-x) < epsi:\n",
+    "            return x\n",
+    "            break\n",
+    "def test_square_root():\n",
+    "    import math\n",
+    "    for a in range (1,10):\n",
+    "        b= square_root(a)\n",
+    "        c= math.sqrt(a)\n",
+    "        d= abs(b-c)\n",
+    "        s= ' '\n",
+    "        print a, s*5, b, s*(20-len(str(b))), c, s*(20-len(str(c))), d\n",
+    "        \n",
+    "        \n",
+    "test_square_root()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,12 +576,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14159273001\n",
+      "3.14159273001\n",
+      "3.14159273001\n",
+      "3.14159273001\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7.642351240733092e-08"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def estimate_pi():\n",
+    "    k=0\n",
+    "    val=0\n",
+    "    count=0\n",
+    "    pi=0\n",
+    "    multi= (2*math.sqrt(2))/(9801)\n",
+    "    while True:\n",
+    "        factk= math.factorial(k)\n",
+    "        factfk= math.factorial(4*k)\n",
+    "        sumk=1103+(26390*k)\n",
+    "        divi= (factk**4)*(396**(4*k))\n",
+    "        equ= (factfk*sumk)/(divi)\n",
+    "        val= val+equ\n",
+    "        print 1/(val*multi)\n",
+    "        k=k+1\n",
+    "        count=count+1\n",
+    "        if abs(pi-(1/(val*multi)))<(1e-50):\n",
+    "            return 1/(val*multi)\n",
+    "        if k > 15:\n",
+    "            break\n",
+    "        pi=1/(val*multi)\n",
+    "        \n",
+    "estimate_pi()\n",
+    "abs(estimate_pi()-math.pi)"
+   ]
   },
   {
    "cell_type": "markdown",
