Turning in day 3

--- a/day3_reading_journal.ipynb
+++ b/day3_reading_journal.ipynb
@@ -34,12 +34,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\n",
+      "w\n",
+      "o\n",
+      "d\n",
+      " \n",
+      "e\n",
+      "d\n",
+      "i\n",
+      "s\n",
+      "p\n",
+      "u\n",
+      " \n",
+      "d\n",
+      "e\n",
+      "n\n",
+      "r\n",
+      "u\n",
+      "t\n",
+      " \n",
+      "d\n",
+      "e\n",
+      "p\n",
+      "p\n",
+      "i\n",
+      "l\n",
+      "f\n",
+      " \n",
+      "t\n",
+      "o\n",
+      "g\n",
+      " \n",
+      "e\n",
+      "f\n",
+      "i\n",
+      "l\n",
+      " \n",
+      "y\n",
+      "m\n",
+      " \n",
+      "w\n",
+      "o\n",
+      "h\n",
+      " \n",
+      "t\n",
+      "u\n",
+      "o\n",
+      "b\n",
+      "a\n",
+      " \n",
+      "l\n",
+      "l\n",
+      "a\n",
+      " \n",
+      "y\n",
+      "r\n",
+      "o\n",
+      "t\n",
+      "s\n",
+      " \n",
+      "a\n",
+      " \n",
+      "s\n",
+      "i\n",
+      " \n",
+      "s\n",
+      "i\n",
+      "h\n",
+      "t\n"
+     ]
+    }
+   ],
+   "source": [
+    "def backwards(string):\n",
+    "    if (type(string) == type('aa')):\n",
+    "        length= len(string)\n",
+    "        for x in range (0,length):\n",
+    "            print string[length-1-x]\n",
+    "    else:\n",
+    "        print 'not a string'\n",
+    "        return\n",
+    "backwards('this is a story all about how my life got flipped turned upside down')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,6 +133,28 @@
     "**Challenge (optional):** Write a function that translates words into [Pig Latin](https://en.wikipedia.org/wiki/Pig_Latin). \n",
     "\n",
     "**Additional challenge**: Write a function that translates back into English."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type('aa') == type('bb')"
    ]
   },
   {
@@ -83,12 +190,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count(string,le):\n",
+    "    count=0\n",
+    "    for letter in string:\n",
+    "        if letter == le:\n",
+    "            count=count+1\n",
+    "    print count\n",
+    "        \n",
+    "count('banana','a')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,12 +224,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abc='ABCEDABCABC'\n",
+    "abc[3:].find('ABC')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,18 +256,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def any_lowercase1(s):\n",
     "    for c in s:\n",
     "        if c.islower():\n",
     "            return True\n",
     "        else:\n",
-    "            return False"
+    "            return False\n",
+    "any_lowercase1('yes')\n",
+    "\n",
+    "#this checks to see if all the letters in the string are lowercase. It returns true if they all are, false otherwise."
    ]
   },
   {
@@ -141,18 +293,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'True'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def any_lowercase2(s):\n",
     "    for c in s:\n",
     "        if 'c'.islower():\n",
     "            return 'True'\n",
     "        else:\n",
-    "            return 'False'"
+    "            return 'False'\n",
+    "\n",
+    "any_lowercase2('123')\n",
+    "#This just checks to see if it is a string. If it is, it returns a string 'True' and if it is not, we get an error message and it doesn't work."
    ]
   },
   {
@@ -164,16 +330,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def any_lowercase3(s):\n",
     "    for c in s:\n",
     "        flag = c.islower()\n",
-    "    return flag"
+    "    return flag\n",
+    "\n",
+    "any_lowercase3('STRING')\n",
+    "#This returns True if there are any lowercase letters. If there are none, it returns False."
    ]
   },
   {
@@ -185,17 +365,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def any_lowercase4(s):\n",
     "    flag = False\n",
     "    for c in s:\n",
     "        flag = flag or c.islower()\n",
-    "    return flag"
+    "    return flag\n",
+    "\n",
+    "any_lowercase4('StrinG')\n",
+    "#This returns True if there are any lowercase letters, False otherwise."
    ]
   },
   {
@@ -207,17 +401,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def any_lowercase5(s):\n",
     "    for c in s:\n",
     "        if not c.islower():\n",
     "            return False\n",
-    "    return True"
+    "    return True\n",
+    "\n",
+    "any_lowercase5('string1')\n",
+    "#This checks to see if ALL the letters are lowercase. And if all the characters in the string are letters. "
    ]
   },
   {
@@ -245,6 +453,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strings, integers, floats\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Strings, integers, floats')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -256,6 +483,39 @@
    "metadata": {},
    "source": [
     "**Quick check:** Give at least one similarity and one difference between lists and strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strings and lists can both have their members called by number. Lists can have their items changed by number, while strings cannot. \n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-50-646ee2c8389a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Strings and lists can both have their members called by number. Lists can have their items changed by number, while strings cannot. '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mstring\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'banana'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mstring\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mstring\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "print('Strings and lists can both have their members called by number. Lists can have their items changed by number, while strings cannot. ')\n",
+    "string='banana'\n",
+    "string[2]='a'\n",
+    "print string"
    ]
   },
   {
@@ -276,12 +536,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def average(numbers):\n",
+    "    total=0\n",
+    "    for x in numbers:\n",
+    "        total += x\n",
+    "    length=len(numbers)\n",
+    "    average=total/length\n",
+    "    return average\n",
+    "\n",
+    "average([1,4,5,6])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -293,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -308,15 +589,17 @@
     "    ['burger with kale', 'salad with kale', 'ice cream with kale']\n",
     "    \n",
     "    \"\"\"\n",
-    "    pass    # TODO: Implement me\n",
+    "    for x in range (0,len(menu)):\n",
+    "        menu[x]= menu[x] + ' with ' + ingredient\n",
+    "    return menu\n",
     "\n",
     "# Running doctests in jupyter notebook:\n",
     "# If you'd like to actually run the doctests here, you can uncomment the lines below.\n",
     "# We use this slightly more complex method to test only the add_ingredient function,\n",
     "# without running tests on any other functions that may be in this notebook.\n",
     "\n",
-    "#import doctest\n",
-    "#doctest.run_docstring_examples(add_ingredient, globals())"
+    "import doctest\n",
+    "doctest.run_docstring_examples(add_ingredient, globals())"
    ]
   },
   {
