Turning in day 4!

--- a/day4_reading_journal.ipynb
+++ b/day4_reading_journal.ipynb
@@ -34,12 +34,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def middle(alist):\n",
+    "    length= len(alist)\n",
+    "    nlist= [None]*(length-2)\n",
+    "    for x in range (1,length-1):\n",
+    "        nlist[x-1]=alist[x]\n",
+    "    return nlist\n",
+    "        \n",
+    "lista=[1,2,3,4,5,6]\n",
+    "middle(lista)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,12 +76,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "other than the different methods, middle returns a new list, while chop just changes the original list.\n",
+      "in middle, the original lists state doesnt change while within chop it does. but since chop doesnt return anything it doesnt change the list outside of the function\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chop(lista):\n",
+    "    l=len(lista)\n",
+    "    lista=lista[1:l-2]\n",
+    "    return None\n",
+    "\n",
+    "lista=[1,2,3,4,5]\n",
+    "chop(lista)\n",
+    "\n",
+    "\n",
+    "print('other than the different methods, middle returns a new list, while chop just changes the original list.')\n",
+    "print('in middle, the original lists state doesnt change while within chop it does. but since chop doesnt return anything it doesnt change the list outside of the function')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,12 +114,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_anagram(string1,string2):\n",
+    "    s1=list(string1)\n",
+    "    s2=list(string2)\n",
+    "    s1.sort()\n",
+    "    s2.sort()\n",
+    "    if s1 == s2:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "is_anagram('elvis','lives')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,18 +158,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500\n",
+      "seems to be about 50/50\n"
+     ]
+    }
+   ],
+   "source": [
+    "def has_duplicates(alist):\n",
+    "    l=len(alist)\n",
+    "    blist=alist+[]\n",
+    "    blist.sort()\n",
+    "    for x in range (0,l-1):\n",
+    "        if blist[x]==blist[x+1]:\n",
+    "            return True\n",
+    "    return False\n",
+    "    \n",
+    "has_duplicates([2,4,3,9,2,6])\n",
+    "import random\n",
+    "\n",
+    "def random_birthdays():\n",
+    "    bdaylist=[None]*23\n",
+    "    for x in range (0,23):\n",
+    "        bdaylist[x]=random.randint(1,365)\n",
+    "    return bdaylist\n",
+    "\n",
+    "def run_lots(trials):\n",
+    "    count=0\n",
+    "    a=[None]*trials\n",
+    "    for x in range(0,trials):\n",
+    "        bdaylist=random_birthdays()\n",
+    "        if has_duplicates(bdaylist)==True:\n",
+    "            count=count+1\n",
+    "    return count\n",
+    "\n",
+    "print run_lots(1000)\n",
+    "print('seems to be about 50/50')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Challenge: Exercise 11 (optional)\n",
+    "# Challenge: Exercise 11 (optional)\n",
     "\n",
     "You should read [Chapter 9.1](http://www.greenteapress.com/thinkpython/html/thinkpython010.html) and do Exercise 1 first.\n",
     "\n",
