Turning in day 5!

--- a/day5_reading_journal.ipynb
+++ b/day5_reading_journal.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -82,13 +82,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Section 4.3"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from swampy.TurtleWorld import *\n",
+    "import math\n",
+    "def arc(r,arc):\n",
+    "\n",
+    "\n",
+    "    # Create the world, and a turtle to put in it\n",
+    "    world = TurtleWorld()\n",
+    "    anna = Turtle()\n",
+    "    anna.delay=0.01    \n",
+    "    # Get moving, turtle!\n",
+    "    for i in range (0,arc):\n",
+    "        fd(anna, (2*math.pi*r)/360)\n",
+    "        lt(anna, 1)\n",
+    "    lt(anna)\n",
+    "    fd(anna,r)\n",
+    "\n",
+    "\n",
+    "    # Wait for the user to close the window\n",
+    "    wait_for_user()\n",
+    "    \n",
+    "arc(100,45)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,13 +125,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "More fun"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from swampy.TurtleWorld import *\n",
+    "import math\n",
+    "def flower(r,petal,angle):\n",
+    "\n",
+    "\n",
+    "    # Create the world, and a turtle to put in it\n",
+    "    world = TurtleWorld()\n",
+    "    anna = Turtle()\n",
+    "    anna.delay=0.01\n",
+    "    petals=petal/2\n",
+    "    arc=360/petals\n",
+    "    # Get moving, turtle!\n",
+    "    for i in range(0, petals):\n",
+    "        for i in range (0,arc):\n",
+    "            fd(anna, ((2*math.pi*r)/360)/(angle/45.0))\n",
+    "            lt(anna,1)\n",
+    "        lt(anna)\n",
+    "        lt(anna,angle)\n",
+    "        for i in range(0,arc):\n",
+    "            fd(anna, (((2*math.pi*r)/360)/(angle/45.0)))\n",
+    "            lt(anna,1)\n",
+    "        lt(anna)\n",
+    "        lt(anna,angle)\n",
+    "    for i in range (0,arc):\n",
+    "        fd(anna, ((2*math.pi*r)/360)/(angle/45.0))\n",
+    "        lt(anna,1)\n",
+    "    lt(anna)\n",
+    "    lt(anna,angle)\n",
+    "    for i in range (0,arc/2):\n",
+    "        fd(anna, ((2*math.pi*r)/360)/(angle/45.0))\n",
+    "        lt(anna,1)\n",
+    "    bk(anna,40)\n",
+    "    for i in range (0,360*2):\n",
+    "        fd(anna,((2*math.pi*r)/360)/(angle/45.0)/2)\n",
+    "        lt(anna,1)\n",
+    "        angle=angle+0.25\n",
+    "\n",
+    "\n",
+    "    # Wait for the user to close the window\n",
+    "    wait_for_user()\n",
+    "    \n",
+    "flower(50,8,20.0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,6 +193,15 @@
    "source": [
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
