Turning in day 6

--- a/day6_reading_journal.ipynb
+++ b/day6_reading_journal.ipynb
@@ -49,12 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 6.4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 90\n",
+      "8100\n",
+      "It prints 9 90 and then 8100\n"
+     ]
+    }
+   ],
    "source": [
     "def b(z):\n",
     "    prod = a(z, z)\n",
@@ -72,7 +82,11 @@
     "\n",
     "x = 1\n",
     "y = x + 1\n",
-    "print c(x, y+3, x+y)"
+    "print c(x, y+3, x+y)\n",
+    "\n",
+    "#http://pythontutor.com/visualize.html#code=def+b(z%29%3A%0A++++prod+%3D+a(z,+z%29%0A++++print+z,+prod%0A++++return+prod%0Adef+a(x,+y%29%3A%0A++++x+%3D+x+%2B+1%0A++++return+x+*+y%0A%0Adef+c(x,+y,+z%29%3A%0A++++total+%3D+x+%2B+y+%2B+z%0A++++square+%3D+b(total%29**2%0A++++return+square%0A%0Ax+%3D+1%0Ay+%3D+x+%2B+1%0Aprint+c(x,+y%2B3,+x%2By%29&mode=display&origin=opt-frontend.js&cumulative=false&heapPrimitives=false&textReferences=false&py=2&rawInputLstJSON=%5B%5D&curInstr=20\n",
+    "\n",
+    "print 'It prints 9 90 and then 8100'"
    ]
   },
   {
@@ -94,16 +108,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "solution": "Exercise 6.6"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "is_question": true,
@@ -117,13 +121,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
+    "solution": "Exercise 6.6"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aa\n",
+      "aba\n",
+      "aga\n",
+      "aha\n",
+      "ala\n",
+      "alula\n",
+      "ama\n",
+      "ana\n",
+      "anna\n",
+      "ava\n",
+      "awa\n",
+      "bib\n",
+      "bob\n",
+      "boob\n",
+      "bub\n",
+      "civic\n",
+      "dad\n",
+      "deed\n",
+      "deified\n",
+      "deked\n",
+      "deled\n",
+      "denned\n",
+      "dewed\n",
+      "did\n",
+      "dud\n",
+      "eke\n",
+      "eme\n",
+      "ere\n",
+      "eve\n",
+      "ewe\n",
+      "eye\n",
+      "gag\n",
+      "gig\n",
+      "hah\n",
+      "halalah\n",
+      "hallah\n",
+      "huh\n",
+      "kaiak\n",
+      "kayak\n",
+      "keek\n",
+      "kook\n",
+      "level\n",
+      "madam\n",
+      "marram\n",
+      "mem\n",
+      "mim\n",
+      "minim\n",
+      "mom\n",
+      "mum\n",
+      "noon\n",
+      "nun\n",
+      "oho\n",
+      "otto\n",
+      "pap\n",
+      "peep\n",
+      "pep\n",
+      "pip\n",
+      "poop\n",
+      "pop\n",
+      "pup\n",
+      "radar\n",
+      "redder\n",
+      "refer\n",
+      "reifier\n",
+      "repaper\n",
+      "reviver\n",
+      "rotator\n",
+      "rotor\n",
+      "sagas\n",
+      "sees\n",
+      "selles\n",
+      "sememes\n",
+      "semes\n",
+      "seres\n",
+      "sexes\n",
+      "shahs\n",
+      "sis\n",
+      "solos\n",
+      "sos\n",
+      "stets\n",
+      "tat\n",
+      "tenet\n",
+      "terret\n",
+      "tit\n",
+      "toot\n",
+      "tot\n",
+      "tut\n",
+      "vav\n",
+      "waw\n",
+      "wow\n",
+      "yay\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_palindrome(string):\n",
+    "    '''Checks if a string is a palindrome, or a word that is spelled the same way backward and forward. \n",
+    "        Input: string\n",
+    "        Return: True if palindrome, False if not.\n",
+    "    >>> is_palindrome('noon')\n",
+    "    True\n",
+    "    >>> is_palindrome('Noon')\n",
+    "    True\n",
+    "    >>> is_palindrome('A santa lived as a devil at NASA')\n",
+    "    True\n",
+    "    >>> is_palindrome('Do geese see god')\n",
+    "    True\n",
+    "    >>> is_palindrome('Will the real slim shady please stand up')\n",
+    "    False'''\n",
+    "    if type(' ') == type(string):\n",
+    "        pass\n",
+    "    else:\n",
+    "        string=str(string)\n",
+    "    string=string.lower()\n",
+    "    string=string.replace(\" \",\"\")\n",
+    "    length= len(string)\n",
+    "    if length % 2 == 0:\n",
+    "        if string[0]== string[length-1]:\n",
+    "            for n in range (1,length):\n",
+    "                if string[n] == string[length-n-1]:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    return False\n",
+    "            return True\n",
+    "        return False\n",
+    "    else:\n",
+    "        oddlength=length-1\n",
+    "        if string[0]==string[oddlength]:\n",
+    "            for n in range (0, oddlength):\n",
+    "                if string[n] == string[length-n-1]:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    return False\n",
+    "            return True\n",
+    "        return False\n",
+    "\n",
+    "fin=open('words.txt')\n",
+    "for line in fin:\n",
+    "    word=line.strip()\n",
+    "    if is_palindrome(word) == True:\n",
+    "        print word\n",
+    "\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false,
     "solution": "Exercise 6.6 challenge"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print min(3,5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,13 +311,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 6.7"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "'''A number a is a power of b if it is divisible by b and a/b is a power of b. \n",
+    "    Takes parameters a and b. \n",
+    "    Returns True if a is a power of b.\n",
+    "    >>> is_power(8,2)\n",
+    "    True\n",
+    "    >>> is_power(1,1)\n",
+    "    True\n",
+    "    >>> is_power(0,0)\n",
+    "    True\n",
+    "    >>> is_power(2,5)\n",
+    "    False\n",
+    "    >>> is_power(6,0)\n",
+    "    False\n",
+    "    >>> is_power(768,4)\n",
+    "    False'''\n",
+    "\n",
+    "def is_power(a,b):\n",
+    "    if b == 0:\n",
+    "        if a==0:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    elif a % b == 0:\n",
+    "        if (a/b) % b ==0:\n",
+    "            div= a/b\n",
+    "            while div > 1:\n",
+    "                div= div/b\n",
+    "            if div == 1:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "        else:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    import doctest\n",
+    "    doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,13 +379,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "problem": "Exercise 6.8"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "    >>> gcd(12,16)\n",
+    "    4\n",
+    "    >>> gcd(33,22)\n",
+    "    11'''\n",
+    "\n",
+    "def gcd(a,b):\n",
+    "    remaindera= a % b\n",
+    "    remainderb= b % a\n",
+    "    gcd=1\n",
+    "    small=min(a,b)\n",
+    "    for c in range (1,small):\n",
+    "        remaindera= a % c\n",
+    "        remainderb= b % c\n",
+    "        if remaindera == 0 and remainderb == 0:\n",
+    "            gcd=c\n",
+    "    return gcd\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    import doctest\n",
+    "    doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
