--- a/day7_reading_journal.ipynb
+++ b/day7_reading_journal.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    "Like a list, but instead of mapping values to integers it maps them to other values. So, you could map a word's definition to the word itself, and whenever you call the word the definition would show up. Dictionaries' values aren't mapped by an order (1st value, 2nd value, 3rd value) and instead doesn't intrinsically have an order you can call.  "
    ]
   },
   {
@@ -61,21 +61,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 11.2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'r': 1, 'g': 3, 'o': 1, 'f': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "def histogram(s):\n",
     "    d = dict()\n",
     "    for c in s:\n",
-    "        if c not in d:\n",
-    "            d[c] = 1\n",
-    "        else:\n",
-    "            d[c] += 1\n",
-    "    return d"
+    "        d[c]= d.get(c,0) + 1\n",
+    "    return d\n",
+    "\n",
+    "\n",
+    "print histogram('froggg')"
    ]
   },
   {
@@ -92,18 +100,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 11.4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['e', 's']\n"
+     ]
+    }
+   ],
    "source": [
     "def reverse_lookup(d, v):\n",
+    "    a = []\n",
     "    for k in d:\n",
     "        if d[k] == v:\n",
-    "            return k\n",
-    "    raise ValueError"
+    "            a += k\n",
+    "    return a\n",
+    "keymap= {'a':'s','s':'r','m':'w','e':'r'}\n",
+    "print reverse_lookup (keymap,'r')\n",
+    "\n"
    ]
   },
   {
@@ -124,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    "They must be strings "
    ]
   },
   {
@@ -145,13 +165,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 11.6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-17-b02dbfc7bf56>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-17-b02dbfc7bf56>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    else:\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "def leven(a,b):\n",
+    "    changed={a}\n",
+    "    if len(a) == len(b):\n",
+    "        \n",
+    "    else:\n",
+    "        short= min(len(a),len(b))\n",
+    "        for x in range (len(short)-1):\n",
+    "            if a[x] == b[x]:\n",
+    "                pass\n",
+    "            elif a[x+1] == b[x]:\n",
+    "                changed+= a[x+1]:b[x]\n",
+    "            elif a[x] == b[x+1]:\n",
+    "                changed+= a[x]:b[(x+1):]\n",
+    "            \n",
+    "                \n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    "a tuple is a non-editable list, on which many list functions do not work.  "
    ]
   },
   {
@@ -198,16 +244,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "solution": "Exercise 12.1"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -219,6 +255,35 @@
     "def my_func(required_argument1, *arguments, **keywords):\n",
     "    ...\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false,
+    "solution": "Exercise 12.1"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumall(tuples):\n",
+    "    numarg= len(tuples)\n",
+    "    runningsum= tuples[0]+tuples[1]\n",
+    "    for x in range (2, (numarg)):\n",
+    "        runningsum= tuples[x] + runningsum\n",
+    "    return runningsum\n",
+    "    \n",
+    "tuples=(2,3,4,7)\n",
+    "\n",
+    "print sumall(tuples)"
    ]
   },
   {
@@ -235,13 +300,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 12 sort"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['aaaa', 'orange', 'frog', 'rock', 'frankenstein', 'abcz']"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sort_by_last_letter(listofwords):\n",
+    "    newlist = []\n",
+    "    for word in listofwords:\n",
+    "        newlist.append([word[len(word)-1], word])\n",
+    "    newlist.sort()\n",
+    "    res = []\n",
+    "    for letter, word in newlist:\n",
+    "        res.append(word)\n",
+    "    return res\n",
+    "\n",
+    "sort_by_last_letter(['frankenstein','orange','frog','rock','abcz','aaaa'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,7 +348,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    "tuple: for when you need to have a list that you don't want to change, or to call a spot in a matrix or something\n",
+    "list: for when you want to be able to change the things in the list, or add onto it\n",
+    "string: for when you are using non-integers, or if you want to call the thing as just it's contents, not the values of its contents"
    ]
   },
   {
@@ -279,13 +369,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 12.3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['b', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def most_frequent(string):\n",
+    "    freq={}\n",
+    "    freqsort=[]\n",
+    "    for letter in string:\n",
+    "        freq[letter]=freq.get(letter,0) + 1\n",
+    "    for letter in freq:\n",
+    "        freqsort.append((freq[letter], letter))\n",
+    "    freqsort.sort(reverse=True)\n",
+    "    res = []\n",
+    "    for freq,letter in freqsort:\n",
+    "        res.append(letter,)\n",
+    "    return res\n",
+    "            \n",
+    "print most_frequent('aaabbbb')"
+   ]
   },
   {
    "cell_type": "markdown",
