--- a/day9_reading_journal.ipynb
+++ b/day9_reading_journal.ipynb
@@ -29,6 +29,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['the', 'and', 'a', 'to', 'of', 'in', 'it', 'was', 'I', 'he', 'his', 'you', 'Montag', 'that', 'He', 'The', 'on', 'with', 'at', 'said']\n",
+      "these are the 20 most used words in fahrenheit 451\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "f451= open('f451.txt', 'r')\n",
+    "def wordcounter(document):\n",
+    "    f=''\n",
+    "    for word in document:\n",
+    "        f= f+word\n",
+    "    a= f.replace(\".\", \"\")\n",
+    "    a= a.replace(\",\", \"\")\n",
+    "    a=a.replace(\"'\",\"\")\n",
+    "    a=a.replace('\"','')\n",
+    "    a=a.replace(':','')\n",
+    "    a=a.replace('?','')\n",
+    "    a=a.replace(';','')\n",
+    "    a=a.replace('!','')\n",
+    "    a=a.replace('-','')\n",
+    "    l=a.split()\n",
+    "    wordscount=dict()\n",
+    "    for word in l:\n",
+    "        val= wordscount.get(word,0)\n",
+    "        wordscount[word]=val+1\n",
+    "            \n",
+    "    wordssort= sorted(wordscount,key=wordscount.__getitem__,reverse=True)\n",
+    "    print wordssort[:20]\n",
+    "    \n",
+    "wordcounter(f451)\n",
+    "print \"these are the 20 most used words in fahrenheit 451\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,6 +96,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    " A class is like a template Python uses to make objects with the same sets of attributes that are defined in the class. "
    ]
   },
   {
@@ -78,13 +132,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 15.1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "class Point(object):\n",
+    "    '''Defines a point.\n",
+    "    attributes: x, y'''\n",
+    "    kind= tuple\n",
+    "    def __init__(self,x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        \n",
+    "p1= Point(1,1)\n",
+    "\n",
+    "p2=Point(1,3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def distance_btwn_points(p1,p2):\n",
+    "    x1=p1.x\n",
+    "    x2=p2.x\n",
+    "    y1=p1.y\n",
+    "    y2=p2.y\n",
+    "    difxsqr= (x2-x1)**2\n",
+    "    difysqr= (y2-y1)**2\n",
+    "    dist= math.sqrt(difxsqr+difysqr)\n",
+    "    return dist\n",
+    "    \n",
+    "distance_btwn_points(p1,p2)\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,13 +193,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 15.2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Rectangle at 0x7fdf4979d3d0>"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Point(object):\n",
+    "    '''Defines a point.\n",
+    "    attributes: x, y'''\n",
+    "    kind= tuple\n",
+    "    def __init__(self,x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "class Rectangle(object):\n",
+    "    '''Defines a rectangle.\n",
+    "    attributes: width, height, corner which is point with (x,y)'''\n",
+    "    def __init__(self,width,height, x, y ):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "        self.x=x\n",
+    "        self.y=y\n",
+    "def move_rectangle(rectangle, dx, dy):\n",
+    "    rectangle.x = rectangle.x + dx\n",
+    "    rectangle.y= rectangle.y+dy\n",
+    "    return rectangle\n",
+    "\n",
+    "cpoint=Point(0,0)\n",
+    "rect=Rectangle(150,100,0,0)\n",
+    "\n",
+    "move_rectangle(rect, 10,20)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,13 +252,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 15.3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Rectangle at 0x7fdf4979d8d0>"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Rectangle(object):\n",
+    "    '''Defines a rectangle.\n",
+    "    attributes: width, height, corner which is point with (x,y)'''\n",
+    "    def __init__(self,width,height, x, y ):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "        self.x=x\n",
+    "        self.y=y\n",
+    "def move_rectangle(rectangle, dx, dy):\n",
+    "    newrectangle= Rectangle(rectangle.width, rectangle.height, rectangle.x + dx, rectangle.y + dy)\n",
+    "    return newrectangle\n",
+    "\n",
+    "cpoint=Point(0,0)\n",
+    "rect=Rectangle(150,100,0,0)\n",
+    "\n",
+    "move_rectangle(rect, 10,20)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,7 +306,7 @@
     "solution": "Time spent"
    },
    "source": [
-    " "
+    "About 2-3 hours, closer to 3 hours than 2"
    ]
   },
   {
