Turning in day 10!

--- a/day10_reading_journal.ipynb
+++ b/day10_reading_journal.ipynb
@@ -35,13 +35,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 16.2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_after(t1,t2):\n",
+    "    #Check it- no if statement!\n",
+    "    hours1=t1.hour\n",
+    "    hours2=t2.hour\n",
+    "    minutes1=t1.minute\n",
+    "    minutes2=t2.minute\n",
+    "    seconds1=t1.second\n",
+    "    seconds2=t2.second\n",
+    "    X=[hours1,minutes1,seconds1,hours2,minutes2,seconds2]\n",
+    "    for s in range (len(X)):\n",
+    "        while any(s > 59 for s in X[:3]):\n",
+    "            X[s]-=60\n",
+    "            X[s-1]+=1\n",
+    "        while X[s] > X[s+3]:\n",
+    "            return True\n",
+    "        return False\n",
+    "\n",
+    "class Time(object):\n",
+    "    \"\"\"Represents the time of day.\n",
+    "       \n",
+    "    attributes: hour, minute, second\n",
+    "    \"\"\"\n",
+    "t1 = Time()\n",
+    "t1.hour = 11\n",
+    "t1.minute = 59\n",
+    "t1.second = 30\n",
+    "\n",
+    "t2 = Time()\n",
+    "t2.hour= 11\n",
+    "t2.minute= 64\n",
+    "t2.second= 33\n",
+    "\n",
+    "is_after(t1,t2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,13 +111,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point(object): \n",
+    "    def __init__(self, x=0, y=0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        \n",
+    "P=Point()\n",
+    "P.x=3\n",
+    "P.y=5\n",
+    "print P.x\n",
+    "\n",
+    "A=Point(3,4)\n",
+    "print A.x \n",
+    "print A.y\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,13 +157,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(33,3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point(object):\n",
+    "    def __init__(self, x=0, y=0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    def __str__(self):\n",
+    "        return '(%.d,%.d)' % (self.x,self.y)\n",
+    "        \n",
+    "A=Point(33,3)\n",
+    "print A\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,13 +198,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(35, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point(object):\n",
+    "    def __init__(self, x=0, y=0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    def __str__(self):\n",
+    "        return '(%.d,%.d)' % (self.x,self.y)\n",
+    "    def __add__(self, other):\n",
+    "        x = self.x + other.x\n",
+    "        y = self.y + other.y\n",
+    "        return (x,y)\n",
+    "A=Point(33,3)\n",
+    "B= Point(2,3)\n",
+    "C= A+B\n",
+    "print C\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,13 +253,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Kangaroo object at 0x7fe74c0c7710>\n",
+      "has in his pouch\n",
+      "['frog', 'elephant', <__main__.Kangaroo object at 0x7fe74c05ba90>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Kangaroo(object):\n",
+    "    def __init__(self, pouch_contents=None):\n",
+    "        self.pouch_contents = pouch_contents\n",
+    "    def put_in_pouch(self, thing):\n",
+    "        if self.pouch_contents == None:\n",
+    "            self.pouch_contents = []\n",
+    "        self.pouch_contents+= [thing]\n",
+    "    def __str__(self):\n",
+    "        print object.__str__(self)\n",
+    "        print 'has in his pouch'\n",
+    "        return str(self.pouch_contents)\n",
+    "        #print str(self.pouch_contents)\n",
+    "    \n",
+    "Jumpy = Kangaroo()\n",
+    "Jumpy.put_in_pouch('frog')\n",
+    "Jumpy.put_in_pouch('elephant')\n",
+    "Numpy = Kangaroo()\n",
+    "Numpy.put_in_pouch('dog')\n",
+    "Jumpy.put_in_pouch(Numpy)\n",
+    "print Jumpy\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,7 +311,7 @@
     "solution": "Time spent"
    },
    "source": [
-    " "
+    "About 2 hours "
    ]
   },
   {
